# melfa_ros2_driver

./: CONTRIBUTING.md  README.md
doc/: melfa_ros2_driver.md  melfa_ros2_humble.md  rt_real_setup.md  rt_sim_setup.md  rt_toolbox3_setup.md  simple_readme.md
melfa_bringup/: CMakeLists.txt  package.xml
melfa_bringup/config/: ros_gz_bridge.yaml  test_goal_publishers_config.yaml
melfa_bringup/launch/: rh6crh6020_control.launch.py  rh6frh5520_control.launch.py  rv13frl_control.launch.py  rv2fr_control.launch.py  rv4fr_control.launch.py  rv4frl_control.launch.py  rv5as_control.launch.py  rv7frl_control.launch.py  rv80fr_control.launch.py  rv8crl_control.launch.py  test_joint_trajectory_controller.launch.py
melfa_description/: CMakeLists.txt  package.xml
melfa_description/config/: custom_io_params.yaml  initial_positions_rh6crh.yaml  initial_positions_rh6frh.yaml  initial_positions_rv.yaml  rh6crh6020_controllers.yaml  rh6frh5520_controllers.yaml  rv13frl_controllers.yaml  rv2fr_controllers.yaml  rv4fr_controllers.yaml  rv4frl_controllers.yaml  rv5as_controllers.yaml  rv7frl_controllers.yaml  rv80fr_controllers.yaml  rv8crl_controllers.yaml
melfa_description/env-hooks/: melfa_description.dsv.in
melfa_description/launch/: view_rh6crh6020.launch.py  view_rh6frh5520.launch.py  view_rv13frl.launch.py  view_rv2fr.launch.py  view_rv4fr.launch.py  view_rv4frl.launch.py  view_rv5as.launch.py  view_rv7frl.launch.py  view_rv80fr.launch.py  view_rv8crl.launch.py
melfa_description/ros2_control/: rh6crh6020.hardware.xacro  rh6frh5520.hardware.xacro  rv13frl.hardware.xacro  rv2fr.hardware.xacro  rv4fr.hardware.xacro  rv4frl.hardware.xacro  rv5as.hardware.xacro  rv7frl.hardware.xacro  rv80fr.hardware.xacro  rv8crl.hardware.xacro
melfa_description/rviz/: rh6crh6020.rviz  rh6frh5520.rviz  rv13frl.rviz  rv2fr.rviz  rv4fr.rviz  rv4frl.rviz  rv5as.rviz  rv7frl.rviz  rv80fr.rviz  rv8crl.rviz
melfa_driver/: CMakeLists.txt  melfa_driver.xml  package.xml
melfa_driver/include/melfa_driver/: hardware_interface.hpp  melfa_rt_exc.hpp  rt_exc_def.hpp  visibility_control.h
melfa_driver/src/: hardware_interface.cpp  melfa_rt_exc.cpp
melfa_io_controllers/: CMakeLists.txt  melfa_io_controllers.xml  package.xml
melfa_io_controllers/config/: io_limits.yaml
melfa_io_controllers/include/melfa_io_controllers/: melfa_io_controllers.hpp  visibility_control.h
melfa_io_controllers/src/: melfa_io_controllers.cpp
melfa_moveit_config/melfa_rh6crh6020_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
melfa_moveit_config/melfa_rh6frh5520_moveit_config/: CMakeLists.txt  package.xml
melfa_moveit_config/melfa_rv13frl_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
melfa_moveit_config/melfa_rv2fr_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
melfa_moveit_config/melfa_rv4fr_moveit_config/: CMakeLists.txt  package.xml
melfa_moveit_config/melfa_rv4frl_moveit_config/: CMakeLists.txt  package.xml
melfa_moveit_config/melfa_rv5as_moveit_config/: CMakeLists.txt  package.xml
melfa_moveit_config/melfa_rv7frl_moveit_config/: CMakeLists.txt  package.xml
melfa_moveit_config/melfa_rv80fr_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
melfa_moveit_config/melfa_rv8crl_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
melfa_msgs/: CMakeLists.txt  package.xml
melfa_msgs/msg/: ControlMode.msg  ControllerType.msg  GpioCommand.msg  GpioState.msg
melfa_msgs/srv/: GpioConfigure.srv  ModeConfigure.srv
melfa_rh6crh6020_moveit_config/: package.xml
melfa_rh6crh6020_moveit_config/config/: chomp_planning.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  rh6crh6020.ros2_control.xacro  rh6crh6020.srdf  rh6crh6020.srdf.xacro
melfa_rh6crh6020_moveit_config/launch/: demo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
melfa_rh6crh6020_moveit_config/rviz/: rh6crh6020_moveit.rviz
melfa_rh6frh5520_moveit_config/: .setup_assistant  CMakeLists.txt
melfa_rh6frh5520_moveit_config/config/: moveit_controllers.yaml  ompl_planning.yaml  rh6frh5520.srdf  rh6frh5520.srdf.xacro  rh6frh5520_macro.srdf.xacro  rh6frh5520_servo.yaml
melfa_rh6frh5520_moveit_config/launch/: demo.launch.py  warehouse_db.launch.py
melfa_rh6frh5520_moveit_config/rviz/: rh6frh5520_moveit.rviz
melfa_rv13frl_moveit_config/config/: chomp_planning.yaml  kinematics.yaml  ompl_planning.yaml  rv13frl.srdf.xacro  rv13frl.urdf.xacro
melfa_rv13frl_moveit_config/launch/: move_group.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
melfa_rv2fr_moveit_config/: CMakeLists.txt
melfa_rv2fr_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  rv2fr.srdf  rv2fr.srdf.xacro  rv2fr.urdf.xacro  rv2fr_macro.srdf.xacro  rv2fr_servo.yaml
melfa_rv2fr_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
melfa_rv4fr_moveit_config/: .setup_assistant
melfa_rv4fr_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  rv4fr.srdf  rv4fr.srdf.xacro  rv4fr.urdf.xacro
melfa_rv4fr_moveit_config/launch/: demo.launch.py  move_group.launch.py  rv4fr_moveit.launch.py  spawn_controllers.launch.py
melfa_rv4fr_moveit_config/rviz/: rv4fr_moveit.rviz
melfa_rv4frl_moveit_config/: .setup_assistant  CMakeLists.txt
melfa_rv4frl_moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  rv4frl.ros2_control.xacro  rv4frl.srdf  rv4frl.srdf.xacro  rv4frl.urdf.xacro
melfa_rv4frl_moveit_config/launch/: demo.launch.py  move_group.launch.py  rv4frl_moveit.launch.py  setup_assistant.launch.py  (+2 more)
melfa_rv5as_moveit_config/: .setup_assistant  CMakeLists.txt
melfa_rv7frl_moveit_config/: .setup_assistant
melfa_rv8crl_moveit_config/: CMakeLists.txt  package.xml
(+252 files in other folders)
