<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>melfa_driver</name>
  <version>1.0.0</version>
  <description>ROS2 driver for MELFA Robot</description>
  <maintainer email="Muyao.Liu@asia.meap.com">Liu Muyao</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>generate_parameter_library</depend>
  <depend>yaml_cpp_vendor</depend>

  <exec_depend>melfa_description</exec_depend>
  <exec_depend>melfa_bringup</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
